<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="8dp"
  tools:context=".CreateHabbitActivity">

  <EditText
    android:id="@+id/et_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/eat_an_apple" />

  <EditText
    android:id="@+id/et_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/apple_descr"
    android:inputType="textMultiLine"
    android:lines="2" />

  <Button
    android:id="@+id/btn_choose_image"
    android:onClick="chooseImage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/choose_image" />

  <ImageView
    android:id="@+id/iv_image"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:layout_gravity="center_horizontal"
    android:contentDescription="@string/selected_image"
    android:padding="10dp" />

  <Button
    android:id="@+id/btn_save"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="storeHabbit"
    android:text="@string/save" />

  <TextView
    android:id="@+id/tv_error"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="#e53935"
    android:visibility="invisible" />

</LinearLayout>